testy reprodukcji i bugfixy reprodukcji